objects/CustomDistrict__c.object
<CustomObject>
    <fields>
        <fullName>RSD_Name__c</fullName>
        <label>RSD Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_PerNr__c</fullName>
        <label>RSD PerNr</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP_Name__c</fullName>
        <label>RVP Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP_PerNr__c</fullName>
        <label>RVP PerNr</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>